# Orchustr

./: .gitignore  Cargo.toml  LICENSE-MIT.txt  README.md  deny.toml  rust-toolchain.toml
bindings/python/: pyproject.toml  pytest.ini
bindings/python/orchustr/: __init__.py  _orchustr.pyi  _runtime.py  bridge.py  conduit.py  forge.py  graph.py  mcp.py  prompt.py  result.py  state.py  tools.py  workflows.py
bindings/python/tests/: conftest.py  test_agent.py  test_bindings.py  test_graph_builder.py  test_live_openrouter.py
crates/or-anchor/: Cargo.toml
crates/or-anchor/src/: lib.rs
crates/or-anchor/src/application/: orchestrators.rs
crates/or-anchor/src/domain/: contracts.rs  entities.rs  errors.rs
crates/or-anchor/src/infra/: adapters.rs  implementations.rs  mod.rs
crates/or-anchor/tests/unit/: mod.rs  retrieval.rs
crates/or-beacon/: Cargo.toml
crates/or-beacon/src/: lib.rs
crates/or-beacon/src/application/: orchestrators.rs
crates/or-beacon/src/domain/: contracts.rs  entities.rs  errors.rs
crates/or-beacon/src/infra/: adapters.rs  implementations.rs
crates/or-beacon/tests/unit/: mod.rs  security.rs
crates/or-bridge/: Cargo.toml
crates/or-bridge/src/: dart.rs  lib.rs  node.rs  python.rs
crates/or-bridge/src/application/: orchestrators.rs
crates/or-bridge/src/domain/: contracts.rs  entities.rs  errors.rs
crates/or-bridge/src/infra/: adapters.rs  facades.rs  implementations.rs  mod.rs
crates/or-bridge/src/python/: colony_builder.rs  conduit_provider.rs  conversions.rs  dyn_state.rs  forge_registry.rs  graph_builder.rs  mod.rs  node_result.rs  pipeline_builder.rs  prompt_builder.rs  relay_builder.rs
crates/or-bridge/tests/unit/: dart.rs  mod.rs
crates/or-checkpoint/: Cargo.toml
crates/or-checkpoint/src/: lib.rs
crates/or-checkpoint/src/application/: orchestrators.rs
crates/or-checkpoint/src/domain/: contracts.rs  entities.rs  errors.rs
crates/or-checkpoint/src/infra/: adapters.rs  implementations.rs  mod.rs
crates/or-checkpoint/tests/unit/: mod.rs
crates/or-cli/: Cargo.toml
crates/or-cli/src/: lib.rs  main.rs
crates/or-cli/src/application/: orchestrators.rs
crates/or-cli/src/domain/: entities.rs  errors.rs
crates/or-cli/src/infra/: templates.rs
crates/or-cli/templates/dart/: main.dart.hbs
crates/or-cli/templates/python/: node.py.hbs  requirements.txt.hbs  test_agent.py.hbs
crates/or-cli/templates/rust/: Cargo.toml.hbs  main.rs.hbs  node.rs.hbs
crates/or-cli/templates/typescript/: index.ts.hbs
crates/or-cli/tests/: init.rs  lint.rs  run.rs
crates/or-colony/: Cargo.toml
crates/or-colony/src/: lib.rs
crates/or-colony/src/application/: orchestrators.rs
crates/or-colony/src/domain/: contracts.rs  entities.rs  errors.rs
crates/or-colony/src/infra/: adapters.rs  implementations.rs
crates/or-colony/tests/unit/: mod.rs
crates/or-compass/: Cargo.toml
crates/or-compass/src/: lib.rs
crates/or-compass/src/application/: orchestrators.rs
crates/or-compass/src/domain/: contracts.rs  entities.rs  errors.rs
crates/or-compass/src/infra/: adapters.rs  implementations.rs  mod.rs
crates/or-compass/tests/unit/: mod.rs  routing.rs
crates/or-conduit/: Cargo.toml
crates/or-conduit/src/: lib.rs
crates/or-conduit/src/application/: orchestrators.rs
crates/or-conduit/src/domain/: contracts.rs  entities.rs  errors.rs
crates/or-conduit/src/infra/: http.rs  mod.rs
crates/or-conduit/tests/unit/: mod.rs  providers.rs
crates/or-core/: Cargo.toml
crates/or-core/src/domain/: contracts.rs
crates/or-core/src/infra/: implementations.rs
crates/or-core/tests/unit/: mod.rs  observability.rs
crates/or-forge/: Cargo.toml
crates/or-forge/src/: lib.rs
crates/or-forge/src/application/: orchestrators.rs
crates/or-forge/src/domain/: contracts.rs  entities.rs  errors.rs
crates/or-forge/src/infra/: adapters.rs  implementations.rs  mod.rs
crates/or-forge/tests/unit/: mcp_import_all.rs  mod.rs  security.rs
crates/or-lens/: Cargo.toml
crates/or-lens/assets/: dashboard.html
crates/or-lens/src/: collector.rs  lib.rs  server.rs  snapshot.rs  tracing_layer.rs
crates/or-lens/src/application/: orchestrators.rs
crates/or-lens/src/domain/: contracts.rs  entities.rs  errors.rs
crates/or-lens/src/infra/: http.rs  mod.rs  repositories.rs  tracing.rs
crates/or-lens/tests/: dashboard.rs
crates/or-loom/: Cargo.toml
crates/or-loom/src/: inspection.rs  lib.rs  registry.rs
crates/or-loom/src/application/: orchestrators.rs
crates/or-loom/src/domain/: contracts.rs  entities.rs  errors.rs
crates/or-loom/src/infra/: adapters.rs  implementations.rs  mod.rs
crates/or-loom/tests/unit/: graph.rs  mod.rs  registry.rs  stress.rs
crates/or-mcp/: Cargo.toml
crates/or-mcp/src/: known_servers.rs  lib.rs  multi_client.rs
crates/or-mcp/src/application/: server_validation.rs
crates/or-mcp/src/domain/: entities.rs
crates/or-mcp/src/infra/: http_transport.rs  stdio_transport.rs
crates/or-mcp/tests/unit/: client_server.rs  mod.rs  multi_client.rs
crates/or-prism/: Cargo.toml
crates/or-prism/src/: lens_bridge.rs  lib.rs
crates/or-prism/src/application/: orchestrators.rs
crates/or-prism/src/domain/: contracts.rs  entities.rs  errors.rs
crates/or-prism/src/infra/: adapters.rs  implementations.rs
crates/or-recall/: Cargo.toml
crates/or-recall/src/: lib.rs
crates/or-schema/: Cargo.toml
crates/or-schema/src/: lib.rs  loader.rs
crates/or-schema/tests/: roundtrip.rs
crates/or-sentinel/: Cargo.toml
crates/or-sentinel/src/: builder.rs  lib.rs  topology.rs
crates/or-sieve/: Cargo.toml
crates/or-sieve/src/: lib.rs
crates/tools/or-tools-comms/: Cargo.toml
crates/tools/or-tools-exec/: Cargo.toml
crates/tools/or-tools-file/: Cargo.toml
crates/tools/or-tools-loaders/: Cargo.toml
crates/tools/or-tools-vector/: Cargo.toml
crates/tools/or-tools-web/: Cargo.toml
docs/: CHANGELOG.md  (+7 more)
tests/integration/: Cargo.toml  agent_loop.rs  chain_execution.rs  graph_traversal.rs  human_approval_gate.rs  live_openrouter.rs  mcp_client_server.rs  multimodal_completion.rs  regression.rs  tool_invocation.rs
(+328 files in other folders)
