[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "orchustr"
version = "0.1.3"
requires-python = ">=3.10"
dependencies = ["aiohttp>=3.9"]

[tool.maturin]
manifest-path = "../../crates/or-bridge/Cargo.toml"
python-source = "."
module-name = "orchustr._orchustr"
features = ["python"]
