[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "or-beacon"
rust-version.workspace = true
version.workspace = true

[dependencies]
or-core = { path = "../or-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
