[package]
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
name = "or-checkpoint"
rust-version.workspace = true
version.workspace = true

[dependencies]
or-core = { path = "../or-core", version = "0.1.3" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
