[package]
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
name = "or-cli"
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "orchustr"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
clap.workspace = true
or-lens = { path = "../or-lens", version = "0.1.3", features = ["dashboard"] }
or-schema = { path = "../or-schema", version = "0.1.3", features = ["yaml"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.34"
thiserror.workspace = true
tokio = { workspace = true, features = ["signal"] }

[dev-dependencies]
tempfile = "3.17.1"
tokio.workspace = true
