[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "or-core"
rust-version.workspace = true
version.workspace = true

[dependencies]
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
mockall.workspace = true
