[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "or-forge"
rust-version.workspace = true
version.workspace = true

[dependencies]
or-mcp = { path = "../or-mcp" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
