[package]
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
name = "or-forge"
rust-version.workspace = true
version.workspace = true

[dependencies]
or-mcp = { path = "../or-mcp", version = "0.1.3" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
