[package]
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
name = "or-lens"
rust-version.workspace = true
version.workspace = true

[features]
default = []
dashboard = ["dep:axum", "dep:dashmap", "dep:reqwest", "dep:serde", "dep:serde_json", "dep:tokio", "dep:tracing", "dep:tracing-subscriber"]

[dependencies]
axum = { version = "0.8.4", optional = true }
dashmap = { version = "6.1.0", optional = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
