[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "or-loom"
rust-version.workspace = true
version.workspace = true

[dependencies]
or-core = { path = "../or-core" }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
futures.workspace = true
or-checkpoint = { path = "../or-checkpoint" }
or-core = { path = "../or-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
