[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "or-mcp"
rust-version.workspace = true
version.workspace = true

[dependencies]
or-core = { path = "../or-core" }
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
mockall.workspace = true
