[package]
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
name = "or-mcp"
rust-version.workspace = true
version.workspace = true

[dependencies]
futures.workspace = true
or-core = { path = "../or-core", version = "0.1.3" }
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
mockall.workspace = true
