[package]
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
name = "or-prism"
rust-version.workspace = true
version.workspace = true

[features]
default = []
lens = ["dep:or-lens"]

[dependencies]
or-lens = { path = "../or-lens", version = "0.1.3", optional = true, features = ["dashboard"] }
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
reqwest.workspace = true
reqwest_otel = { package = "reqwest", version = "0.12.28", default-features = false }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
