[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "or-recall"
rust-version.workspace = true
version.workspace = true

[features]
default = []
sqlite = ["dep:sqlx"]

[dependencies]
or-core = { path = "../or-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite"], optional = true }

[dev-dependencies]
mockall.workspace = true
serde_json.workspace = true
tokio.workspace = true
