[package]
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
name = "or-sentinel"
rust-version.workspace = true
version.workspace = true

[dependencies]
or-conduit = { path = "../or-conduit", version = "0.1.3" }
or-core = { path = "../or-core", version = "0.1.3" }
or-forge = { path = "../or-forge", version = "0.1.3" }
or-loom = { path = "../or-loom", version = "0.1.3" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
mockall.workspace = true
or-mcp = { path = "../or-mcp", version = "0.1.3" }
schemars.workspace = true
tokio.workspace = true
