[package]
name = "or-integration-tests"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dev-dependencies]
or-beacon = { path = "../../crates/or-beacon" }
or-checkpoint = { path = "../../crates/or-checkpoint" }
or-compass = { path = "../../crates/or-compass" }
or-conduit = { path = "../../crates/or-conduit" }
or-core = { path = "../../crates/or-core" }
or-forge = { path = "../../crates/or-forge" }
or-loom = { path = "../../crates/or-loom" }
or-mcp = { path = "../../crates/or-mcp" }
or-pipeline = { path = "../../crates/or-pipeline" }
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true

[[test]]
name = "graph_traversal"
path = "graph_traversal.rs"

[[test]]
name = "chain_execution"
path = "chain_execution.rs"

[[test]]
name = "tool_invocation"
path = "tool_invocation.rs"

[[test]]
name = "human_approval_gate"
path = "human_approval_gate.rs"

[[test]]
name = "mcp_client_server"
path = "mcp_client_server.rs"

[[test]]
name = "multimodal_completion"
path = "multimodal_completion.rs"

[[test]]
name = "regression"
path = "regression.rs"
