[package]
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
name = "or-tools-comms"
rust-version.workspace = true
version.workspace = true

[features]
default = []
twilio = []
telegram = []
discord = []
whatsapp = []
facebook = []
messenger = []
all = ["twilio", "telegram", "discord", "whatsapp", "facebook", "messenger"]

[dependencies]
or-tools-core = { path = "../or-tools-core", version = "0.1.3" }
async-trait.workspace = true
base64.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
mockall.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
