[package]
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
name = "or-tools-file"
rust-version.workspace = true
version.workspace = true

[features]
default = ["local", "json-toolkit"]
local = []
json-toolkit = []
gdrive = []
arxiv = []
financial = []
all = ["local", "json-toolkit", "gdrive", "arxiv", "financial"]

[dependencies]
or-tools-core = { path = "../or-tools-core", version = "0.1.3" }
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt-multi-thread"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
mockall.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
