[package]
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
name = "or-tools-loaders"
rust-version.workspace = true
version.workspace = true

[features]
default = ["text", "markdown", "json", "csv", "html"]
text = []
markdown = []
json = []
csv = ["dep:csv"]
html = []
pdf = ["dep:lopdf"]
docx = []
all = ["text", "markdown", "json", "csv", "html", "pdf", "docx"]

[dependencies]
or-tools-core = { path = "../or-tools-core", version = "0.1.3" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
tracing.workspace = true
base64.workspace = true
csv = { version = "1.3.1", optional = true }
lopdf = { version = "0.34.0", optional = true }

[dev-dependencies]
mockall.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
