[package]
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
name = "or-tools-vector"
rust-version.workspace = true
version.workspace = true

[features]
default = []
pinecone = []
weaviate = []
qdrant = []
chroma = []
milvus = []
pgvector = ["dep:sqlx"]
all = ["pinecone", "weaviate", "qdrant", "chroma", "milvus", "pgvector"]

[dependencies]
or-core = { path = "../../or-core", version = "0.1.3" }
or-tools-core = { path = "../or-tools-core", version = "0.1.3" }
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres"], optional = true }

[dev-dependencies]
mockall.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
