[package]
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
name = "or-tools-web"
rust-version.workspace = true
version.workspace = true

[features]
default = ["requests"]
requests = []
playwright = []
brightdata = []
hyperbrowser = []
agentql = []
oxylabs = []
all = ["requests", "playwright", "brightdata", "hyperbrowser", "agentql", "oxylabs"]

[dependencies]
or-tools-core = { path = "../or-tools-core", version = "0.1.3" }
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
mockall.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
